grammar.txt
program ::= "PROG" ":" identifier "\n" commands ":" "PROG"

commands ::= (command "\n")*
command ::= value | branch | loop | io | declaration

value ::= indexing "=" expression

branch ::= "HA" ":" expression "\n" commands (":" "DE-HA" ":" commands)* (":" "NEM-HA" ":" commands)? ":" "HA"

loop ::= condition-loop | counter-loop

condition-loop ::= "CIKLUS" ":" expression ("," identifier)? "\n" commands ":" "CIKLUS"

counter-loop ::= "ISM" ":" expression ("," identifier)? "\n" commands ":" "ISM"

io ::= ("KI" ":" expression ("," expression)*) | ("BE" ":" identifier)

expression ::= equality (("AND" | "OR") equality)*
equality ::= comparison (("==" | "!=") comparison)*
comparison ::= term ((">" | ">=" | "<" | "<=") term)*
term ::= factor (("+" | "-") factor)*
factor ::= unary (("*" | "/" | "//" | "%") unary)*
unary ::= (("NOT" | "-") unary) | primary
primary ::= NUMBER | STRING | CHAR | "IGAZ" | "HAMIS" | "SEMMI" | "(" expression ")" | indexing

indexing ::= idendifier ("[" expression "]")*
identifier ::= [A-z] (idchar)*
idchar ::= [A-z] | [0-9] | "_" | "?"

declaration ::= atomic-declaration | list-declaration
atomic-declaration ::= atomic-type ":" identifier ("=" expression)?
list-declaration ::= list ":" identifier "[" expression "]"
type ::= atomic-type | list-type
list-type ::= "LIST" "[" type "]"
atomic-type ::= "NUM" | "TXT" | "KAR" | "LOG"
